--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^1.11.0",
     "pinia": "^3.0.3",
-    "primevue": "^3.39.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
